<resources>
    <string name="app_name">Tottho</string>
    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="events">Events</string>
    <string name="government">Government</string>
    <string name="scholarship_portal">Scholarship Portal</string>
    <string name="logout">Logout</string>
    <string name="team_travers">Team Travers</string>
    <string name="developed_by">Developed By</string>
    <string name="education_moto_for_tour_page">Get all education related information</string>
    <string name="events_moto_for_tour_page">You will get recent happening events details</string>
    <string name="government_moto_for_tour_page">All government circulars and details</string>
    <string name="scholarship_moto_for_tour_page">Recent scholarship news and their details</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_without_underline">Login</string>
    <string name="mobile_no_hint">Enter mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password_hint">Enter same password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_hint">Enter username</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="on_tap_sign_in">On tap sign in</string>
    <string name="google">Google</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="easier_sign_up">Its easier to sign up</string>
    <string name="or">Or</string>
    <string name="sign_up_with_us">Sign up with us</string>
    <string name="hello">Hello</string>
    <string name="accept_terms">Accpent terms and privacy</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="your_stats">Your Statistics</string>
    <string name="number_of_post_you_viewed">Number of post viewed</string>
    <string name="zero">0</string>
    <string name="number_of_post_saved">Number of post saved</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="nodata">No data available</string>
    <string name="no_post_viewed">You didnt viewed any post</string>
    <string name="demo_mail">sample@gmail.com</string>
    <string name="demo_mobile">01XXX-XXXXXX</string>
    <string name="demo_website_link">sample.com</string>
    <string name="demo_address">Sample,Dhaka</string>
    <string name="demo_name">Sample Name</string>
    <string name="search_here">Search your queries here</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="demo_username">John Doe</string>
    <string name="date_hint">DD-MM-YYYY</string>
    <string name="post_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="likes_count_demo">110</string>
    <string name="home">Home</string>
    <string name="recent_posts_by_you">Recent Posts by you</string>
    <string name="total_items">Total Posts</string>
    <string name="all_items">All Posts</string>
    <string name="scholarships">Scholarships</string>
    <string name="popular_searches">Popular searches</string>
    <string name="scholarship_type">Scholarship Type</string>
    <string name="post_date">Post Date</string>
    <string name="min_read">min Read</string>
    <string name="six_min_read">6 min read</string>
    <string name="title">Title</string>
    <string name="eligibility_demo">The requirements for a scholarship after you win typically involve keeping a certain GPA, continuing to demonstrate financial need or staying involved in an extracurricular sport or organization.</string>
    <string name="apply_procedure">Most organizations will have online scholarship applications. Some will require that you contact them through the mail to request applications and other pertinent information</string>
    <string name="scholarship_details">Scholarship Details</string>
    <string name="description">Description</string>
    <string name="eligibility">Eligibility</string>
    <string name="how_to_apply">How to Apply</string>
    <string name="official_contact">Official Contact</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="search">Search</string>
    <string name="region">Region</string>
    <string name="percentage_sample">70%</string>
    <string name="point_sample_1">4200</string>
    <string name="point_sample_2">5000</string>
    <string name="pts">pts</string>
    <string name="point_details">Point Details</string>
    <string name="my_points">My points</string>
    <string name="status">Status</string>
    <string name="silver">Silver</string>
    <string name="progress_to_next_badge">Progress to next badge</string>
    <string name="deals">Deals</string>
    <string name="great_deals_are_coming_soon">Great deals are coming soon!</string>
    <string name="stay_tuned">Stay Tuned!</string>
    <string name="bronze">BRONZE</string>
    <string name="silver_status">SILVER</string>
    <string name="gold">GOLD</string>
    <string name="platinum">PLATINUM</string>
    <string name="point_sample_3">1000</string>
    <string name="point_sample_4">500</string>
    <string name="post_details">Post Details</string>
    <string name="dummy_post_count">75</string>
    <string name="dummy_post_view">45k</string>
    <string name="dummy_email">shakil.py@gmail.com</string>
    <string name="dummy_title">Daffodil International University</string>
    <string name="dummy_website">diu.edu.bd</string>
    <string name="dummy_address">Sukrabad,Dhanmond-32</string>
</resources>