<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.education.EducationActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_left_arrow_new"
            app:tint="@color/md_cyan_600"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scholarship_details"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_cyan_600"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PostDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_hint"
                android:textSize="18sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/scholarship_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ScholarshipDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/post_description"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eligibility"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Eligibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/post_description"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/how_to_apply"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ApplyProcedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/post_description"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/official_contact"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text=":"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/OfficialContactAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="Official Contact Address"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text=":"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/OfficialContactEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="Official Contact Mail"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text=":"
                    android:textSize="14sp"
                    android:textColor="@color/md_cyan_600"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/OfficialContactWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="Official Contact Website"
                    android:textSize="14sp"
                    android:autoLink="web"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>