<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.base.auth.GenericAuthActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="fill_parent"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/mainLayout"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:src="@drawable/ic_information"
                    android:tag="Drawable"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/md_grey_800"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/easier_sign_up"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/md_grey_800"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/signUpWithUs"
                    android:layout_width="272dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:padding="2dp"
                    android:clickable="true"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/button_shape_round_corner"
                    app:backgroundTint="@null"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/sign_up_with_us"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="4dp"
                    android:textColor="@color/md_grey_800"/>

                <Button
                    android:id="@+id/onTapGoogle"
                    android:layout_width="272dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:padding="2dp"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    app:backgroundTint="@null"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:clickable="true"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/button_shape_round_corner"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/google"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:weightSum="1"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="center|right"
                    android:gravity="center|right"
                    android:clickable="false"
                    android:textColor="@color/md_grey_800"
                    android:text="@string/already_have_account"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="center|left"
                    android:gravity="center"
                    android:textColor="@color/commonColor"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:text="@string/login_without_underline"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>