<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="12dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:translationZ="2dp"
    app:cardBackgroundColor="@color/md_white_1000"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:weightSum="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">


            <!--Post heading section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_scholarship"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ScholarshipType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scholarship_type"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"/>
                    <TextView
                        android:id="@+id/PostDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_date"
                        android:textSize="12sp"
                        android:textColor="@color/md_grey_800"/>

                </LinearLayout>

            </LinearLayout>

            <!--Post description section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginLeft="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/md_grey_800"
                    android:layout_marginRight="4dp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/ScholarshipDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_description"
                    android:layout_marginLeft="4dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/md_grey_800"
                    android:layout_marginRight="4dp"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:textSize="14sp"/>

            </LinearLayout>

            <!--Post short details section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_gravity="right">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TimeToRead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="@color/md_grey_800"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/ic_time"
                        android:drawablePadding="4dp"
                        android:drawableTint="@color/md_cyan_600"
                        android:gravity="center"
                        android:text="@string/six_min_read"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>